data/test/regression/type_check/fail/issue_30d.v
wire x;
always @(posedge clock.val) begin
  x = 1;
end
